--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,16 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  height: "100%";
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 1s linear;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
+  .App {
+    animation: backgroundFade 10s linear;
+  }
 }
 
 @keyframes App-logo-spin {
@@ -34,5 +19,24 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes fadeAnim {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes backgroundFade {
+  0% {
+    background-color: "#FF0000";
+  }
+
+  100% {
+    background-color: "#FFFFFF";
   }
 }
