--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 .App {
   text-align: center;
-  height: "100%";
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -9,7 +8,7 @@
   }
 
   .App {
-    animation: backgroundFade 1s linear;
+    /* animation: backgroundFade 1s linear; */
   }
 }
 
